<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2016, 2017, 2019 Vincent Hiribarren

This program is free software; you can redistribute it and/or modify it under
the terms of the GNU General Public License as published by the Free Software
Foundation; either version 3 of the License, or (at your option) any later
version.

Linking Beacon Simulator statically or dynamically with other modules is making
a combined work based on Beacon Simulator. Thus, the terms and conditions of
the GNU General Public License cover the whole combination.

As a special exception, the copyright holders of Beacon Simulator give you
permission to combine Beacon Simulator program with free software programs
or libraries that are released under the GNU LGPL and with independent
modules that communicate with Beacon Simulator solely through the
net.alea.beaconsimulator.bluetooth.AdvertiseDataGenerator and the
net.alea.beaconsimulator.bluetooth.AdvertiseDataParser interfaces. You may
copy and distribute such a system following the terms of the GNU GPL for
Beacon Simulator and the licenses of the other code concerned, provided that
you include the source code of that other code when and as the GNU GPL
requires distribution of source code and provided that you do not modify the
net.alea.beaconsimulator.bluetooth.AdvertiseDataGenerator and the
net.alea.beaconsimulator.bluetooth.AdvertiseDataParser interfaces.

The intent of this license exception and interface is to allow Bluetooth low energy
closed or proprietary advertise data packet structures and contents to be sensibly
kept closed, while ensuring the GPL is applied. This is done by using an interface
which only purpose is to generate android.bluetooth.le.AdvertiseData objects.

This exception is an additional permission under section 7 of the GNU General
Public License, version 3 (“GPLv3”).

This program is distributed in the hope that it will be useful, but WITHOUT ANY
WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
PARTICULAR PURPOSE. See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with
this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/beacondiag_toolbar"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/diagnostic_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/diagnostic_textview_explanation" />

        <Button
            android:text="@string/diagnostic_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/diagnostic_button_start"
            style="@style/Button.Borderless"
            android:layout_gravity="right" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/diagnostic_linearlayout_result"
            android:visibility="visible"
            android:paddingBottom="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/diagnostic_textview_result" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/diagnostic_linearlayout_count">

            <ImageView
                app:srcCompat="@drawable/ic_menu_broadcast_on"
                android:contentDescription="@string/action_autodiagnostic"
                android:layout_weight="1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:tint="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diagnostic_textview_maxbroadcast"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="36sp" />

        </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>