...
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:useDefaultMargins="true">

        <!-- iBeacon support is removed due to license restriction from Apple -->
        <TextView
            android:id="@+id/newbeacon_textview_ibeacon"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:drawableTop="@drawable/ic_beacon_ibeacon"
            android:gravity="bottom|center"
            android:text="@string/all_ibeacon"
            android:textColor="@android:color/black"
...
